--- a/internal/codegen/golang/templates/pgx/queryCode.tmpl
+++ b/internal/codegen/golang/templates/pgx/queryCode.tmpl
@@ -101,6 +101,8 @@ func (r *{{.MethodName}}Rows) Iterate() iter.Seq[{{.Ret.DefineType}}] {
 	}
 
 	return func(yield func({{.Ret.DefineType}}) bool) {
+		defer r.rows.Close()
+
 		for r.rows.Next() {
 			var {{.Ret.Name}} {{.Ret.Type}}
 			err := r.rows.Scan({{.Ret.Scan}})
@@ -110,7 +112,6 @@ func (r *{{.MethodName}}Rows) Iterate() iter.Seq[{{.Ret.DefineType}}] {
 			}
 
 			if !yield({{.Ret.ReturnName}}) {
-				r.rows.Close()
 				return
 			}
 		}
